hydroflow/tests/compile-fail/surface_lattice_fold_wronggeneric.stderr
error[E0271]: expected `Drain<'_, {integer}>` to be an iterator that yields `SetUnion<_>`, but it yields `{integer}`
 --> tests/compile-fail/surface_lattice_fold_wronggeneric.rs:5:9
  |
5 |         source_iter([1,2,3,4,5])
  |         ^^^^^^^^^^^^^^^^^^^^^^^^ expected `SetUnion<_>`, found integer
6 |             -> lattice_fold::<'static, hydroflow::lattices::set_union::SetUnionHashSet<u32>>()
  |                                        ---------------------------------------------------- required by a bound introduced by this call
  |
  = note: expected struct `SetUnion<_>`
               found type `{integer}`
note: required by a bound in `check_inputs`
 --> tests/compile-fail/surface_lattice_fold_wronggeneric.rs:6:40
  |
6 |             -> lattice_fold::<'static, hydroflow::lattices::set_union::SetUnionHashSet<u32>>()
  |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `check_inputs`
